<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_back"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/last_screen"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/menu_list" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/trans_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/qs_light"
        android:text="@string/welcome_b"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:background="@drawable/custom_wh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true"
        android:text="@string/lg_as"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/qs_light"/>

    <ImageView
        android:layout_width="140dp"
        android:layout_height="190dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/custom_wh" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="190dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/custom_wh" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cust"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/customer_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/vend"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/vendor_login_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="430dp"
        android:fontFamily="@font/qs_light"
        android:text="@string/customer"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="430dp"
        android:fontFamily="@font/qs_light"
        android:text="@string/vendor"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="350dp"
        android:layout_marginStart="175dp"
        android:text="@string/OR"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/qs_light"/>

    <ImageView
    android:layout_width="90dp"
    android:layout_height="70dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="485dp"
    android:background="@drawable/custom_wh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp"
        android:fontFamily="@font/qs_light"
        android:text="@string/OR"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="555dp"
        android:fontFamily="@font/qs_light"
        android:text="@string/ca_guest"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="185dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="560dp"
        android:background="@drawable/custom_wh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="690dp"
        android:fontFamily="@font/qs_light"
        android:text="@string/Guest"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guest"
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="570dp"
        android:background="@drawable/guest_login" />


</RelativeLayout>