<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lt_blue"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:background="@drawable/custom_sm_bl"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/settings"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/qs_light"
        android:text="We are excited to work with you !!"
        android:textColor="@color/cardview_dark_background"
        android:textSize="38dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="165dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/img_blue"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="185dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/img_lg_bl"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/qs_light"
        android:text="Register as: "
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="190dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/low_blue" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="190dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/low_blue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reg_cust"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/cust" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/vend_reg"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/vend" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="460dp"
        android:fontFamily="@font/qs_light"
        android:text="@string/customer"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="460dp"
        android:fontFamily="@font/qs_light"
        android:text="@string/vendor"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="380dp"
        android:layout_marginStart="175dp"
        android:text="@string/OR"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/qs_light"/>






</RelativeLayout>